<resources>
    <string name="app_name">AmProject</string>
    <string name="title_activity_menu">Historico</string>
    <string name="title_buy">Comprar</string>
    <string name="title_sell">Vender</string>
    <string name="title_account">Conta</string>
    <string name="title_activity_confirmar_compra">Confirmar compra</string>
    <string name="title_activity_comprovante">Comprovante</string>
    <string name="ola_inicio">Olá :)</string>
    <string name="para_acessar_o_aplicativo_inicio">Para acessar o aplicativo, você precisa ser cadastrado</string>
    <string name="voc_j_possui_conta_inicio">Você já possui conta?</string>
    <string name="j_possuo_conta_inicio">Já possuo conta</string>
    <string name="quero_me_cadastrar_inicio">Quero me cadastrar</string>
    <string name="cadastrar_Cadastro">Cadastrar</string>
    <string name="complemento_Cadastro">Complemento</string>
    <string name="bairro_Cadastro">Bairro</string>
    <string name="rua_Cadastro">Rua</string>
    <string name="confirme_sua_senha_Cadastro">Confirme sua senha*</string>
    <string name="senha_Cadastro">Senha*</string>
    <string name="nome_Cadastro">Nome*</string>
    <string name="cpf_Cadastro">CPF*</string>
    <string name="suas_informa_es_estar_o_sempre_protegidas_por_n_s_Cadastro">Suas informações estarão sempre protegidas por nós</string>
    <string name="voc_precisa_preencher_apenas_as_informa_es_obrigat_rias_Cadastro">* Você precisa preencher apenas as informações obrigatórias</string>
    <string name="cadastro_Cadastro">Cadastro</string>
    <string name="bloqueado">bloqueio</string>
    <string name="j_possuo_uma_conta_Cadastro">Já possuo uma conta</string>
    <string name="cep_Cadastro">Cep</string>
    <string name="estado_Cadastro">Estado</string>
    <string name="cidade_Cadastro">Cidade</string>
    <string name="numero_Cadastro">Número</string>
    <string name="endereco_Cadastro">Endereço</string>
    <string name="entrar">Entrar</string>
    <string name="bem_vindo">Pague Fácil</string>
    <string name="cadastrarnome">Cadastrar nome</string>
    <string name="definir_preco">Definir preço</string>
    <string name="selecionar_imagem">Selecionar imagem</string>
    <string name="vender_produto">Vender produto</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="editar_cartao">Editar cartão</string>
    <string name="cadastrar_usuario">Cadastrar usuario</string>
    <string name="cadastrar_cartao">Cadastrar cartao</string>
    <string name="tire_uma_foto">Tire uma foto</string>
    <string name="carregue_uma_foto">Carregue uma foto</string>
    <string name="anexar_fotos_depois">Anexar fotos depois</string>
    <string name="dados_pessoais">Dados pessoais</string>
    <string name="para_vender_voce">Para vender, você precisa cadastrar o seu produto</string>
    <string name="digite_o_que_vender">Digite o que voce gostaria de vender</string>
    <string name="ex_televisao_40_pol_playstation_4_500_gb_etc">Ex.:Televisão 40 pol,Playstation 4 500 gb, etc</string>
    <string name="max_50_caracteres">Max. 50 caracteres</string>
    <string name="pr_ximo">Próximo</string>
    <string name="cadastrar_dados_do_cart_o">Cadastrar dados do cartão</string>
    <string name="nome">Nome</string>
    <string name="numero">Número</string>
    <string name="c_d_seg">Cód.Seg.</string>
    <string name="data_venc">Data Venc.</string>
    <string name="usar_o_mesmo_endereco_para_fatura">Usar o mesmo endereco para fatura?</string>
    <string name="sim">Sim</string>
    <string name="n_o">Não</string>
    <string name="rua">Rua</string>
    <string name="complemento">Complemento</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="cep">Cep</string>
    <string name="confirmar_edi_o">Confirmar Edição</string>
    <string name="deu_certo">Deu Certo!</string>
    <string name="comprovante_de_compra">Comprovante de compra</string>
    <string name="vendedor">Vendedor:</string>
    <string name="comprei_um_a">Comprei um/a:</string>
    <string name="valor_r_300_00">Valor: R$ 300,00</string>
    <string name="transacao_xwqro898_3">Transação: xwqRo898-3</string>
    <string name="comprar_mais">Comprar mais</string>
    <string name="sair">Sair</string>
    <string name="informacao_sobre_sua_compra">Informação sobre sua compra</string>
    <string name="preco">Preço:</string>
    <string name="eu_confirmo_o_pagamento">Eu confirmo o pagamento</string>
    <string name="nao_desisti_da_ideia">Não, desisti da ideia</string>
    <string name="ola">Olá :)</string>
    <string name="para_acessar_o_aplicativo">Para acessar o aplicativo,</string>
    <string name="voc_precisa_estar_cadastrado">Você precisa estar cadastrado</string>
    <string name="voce_ja_possui_conta">Você já possui conta?</string>
    <string name="ja_possuo_conta">Já possuo conta</string>
    <string name="quero_me_cadastrar">Quero me cadastrar</string>
    <string name="escanear_qr_code">Escanear QR Code</string>
    <string name="por_quanto_voce_quer_vender_o_a">Por quanto você quer vender o/a ?</string>
    <string name="defina_o_valor_pelo_qual_voce_queira">Defina o valor pelo qual você queira</string>
    <string name="vender_o_a">vender o/a</string>
    <string name="proximo">Próximo</string>
    <string name="editar_dados_do_cartao">Editar dados do cartão</string>
    <string name="cod_seg">Cod.Seg.</string>
    <string name="nao">Não</string>
    <string name="confirmar_edicao">Confirmar Edição</string>
    <string name="cpf">CPF</string>
    <string name="informacoes_sobre_sua_venda">Informações sobre sua venda</string>
    <string name="para_vender_agora_clique_em_quero_vender_agora_e_aguarde_o_qr_code_ser_gerado">Para vender agora, clique em \'Quero vender agora\' e aguarde o QR code ser gerado</string>
    <string name="mais">+</string>
    <string name="menos">-</string>
    <string name="imagem">Imagem</string>
    <string name="quero_registrar_esse_produto">Quero registrar esse produto</string>
    <string name="venda_avulsa">Venda avulsa</string>
    <string name="quero_vender_agora">Quero vender agora</string>
    <string name="nao_quero_vender_agora">Não quero vender agora</string>
    <string name="texto">Texto</string>
    <string name="utilize_seu_cpf_e_senha_para_realizar_o_login">Utilize seu CPF e Senha para realizar o login</string>
    <string name="senha">Senha</string>
    <string name="esqueci_minha_senha">Esqueci minha Senha</string>
    <string name="selecionar_gerenciador">Selecione um Gerenciador de arquivos</string>
    <string name="selecione_gerenciador_de_arquivo">Selecione um Gerenciador de arquivos</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="aguarde">Aguarde</string>
    <string name="realizando_login">Realizando Login</string>
    <string name="deseja_guardar_login_para_acesso">Deseja gravar o login e a senha para o acesso?</string>
    <string name="Ocorreu_erro_ao_validar_login">Ocorreu um erro ao validar o login</string>
    <string name="Ocorreu_um_erro_inesperado">Ocorreu um erro inesperado</string>
    <string name="cartao_cadastrado">Cartao Cadastrado com sucesso</string>
    <string name="senha_confirmada">Senha Confirmada</string>
    <string name="realizando_cadastro">Realizando cadastro</string>
    <string name="cadastro_realizado">Cadastro realizado</string>
    <string name="erro_ao_realizar_cadastro">Erro ao realizar cadastro</string>
    <string name="estamos_finalizando_transacao">Estamos finalizando a transacao</string>
    <string name="sua_compra_foi_relizada">Sua compra foi realizada!</string>
    <string name="ocorreu_um_erro_ao_finalizar_transacao">Ocorreu um erro ao finalizar a transacao</string>
    <string name="ocorreu_um_erro_inesperado">Ocorreu um erro inesperado</string>
    <string name="por_quanto_voce_quer">Por quanto você quer vender o/a</string>
    <string name="ocorreu_um_erro_ao_buscar_seus_dados">Ocorreu um erro ao buscar os seus dados</string>
    <string name="atualizando_cartao">Atualizando dados do cartão</string>
    <string name="dados_gravados_com_sucesso">Dados gravados com sucesso</string>
    <string name="ocorreu_um_erro_ao_gravar_dados">Ocorreu um erro ao gravar seus dados</string>
    <string name="dados_atualizados">Dados atualizados</string>
    <string name="ocorreu_um_erro_ao_atualizar_os_dados">Ocorreu um erro ao atualizar os dados</string>
    <string name="coletando_seus_dados">Coletando seus dados</string>
    <string name="ocorreu_um_erro_ao_buscar_informacoes">Ocorreu um erro ao buscar informacoes</string>
    <string name="ocorreu_um_erro_ao_deletar_item">Ocorreu um erro ao deletar item</string>
    <string name="estamos_gerando_o_qr_code">Estamos gerando o Qr Code</string>
    <string name="aguarde_guardando_info_sobre_venda">Aguarde enquanto guardamos as informações da sua venda</string>
</resources>
