<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.fiap.am.amproject.InicioActivity">

    <TextView
        android:id="@+id/tv_Ola"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/ola_inicio"
        android:textAlignment="center"
        android:textColor="@color/colorSecondary"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv_msgParaCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/para_acessar_o_aplicativo_inicio"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_JaTemCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/voc_j_possui_conta_inicio"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/bn_JaTemConta"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:background="@drawable/button_shape"
        android:onClick="JaTenhoContaBT"
        android:text="@string/j_possuo_conta_inicio"
        android:textAlignment="center" />

    <Button
        android:id="@+id/bn_FazerCadastro"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:onClick="NaoTenhoContaBT"
        android:background="@drawable/button_shape"
        android:text="@string/quero_me_cadastrar_inicio" />
</LinearLayout>
