<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true">


    <TextView
        android:id="@+id/tv_preencherInformacoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/voc_precisa_preencher_apenas_as_informa_es_obrigat_rias_Cadastro"
        android:textAlignment="inherit"
        android:textSize="15sp" />


    <LinearLayout
        android:layout_width="287dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imv_Lock"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_weight="0.43"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/bloqueado"
            app:srcCompat="@mipmap/ic_lock_black_24dp" />

        <TextView
            android:id="@+id/tv_infoProtegidas"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.02"
            android:text="@string/suas_informa_es_estar_o_sempre_protegidas_por_n_s_Cadastro"
            android:textAlignment="inherit"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_dadosPessoais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingEnd="0dp"
            android:paddingStart="5dp"
            android:text="@string/dados_pessoais"
            android:textSize="12sp"
            tools:ignore="HardcodedText" />


        <EditText
            android:id="@+id/et_Cpf"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_shape"
            android:ems="10"
            android:hint="@string/cpf_Cadastro"
            android:maxLength="14"
            android:paddingEnd="0dp"
            android:paddingStart="10dp"
            android:textSize="14sp"

            />

        <EditText
            android:id="@+id/et_Nome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_shape"
            android:ems="10"
            android:hint="@string/nome_Cadastro"
            android:inputType="text|textCapWords"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_Senha"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_shape"
            android:ems="10"
            android:hint="@string/senha_Cadastro"
            android:inputType="text"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_ConfirmaSenha"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_shape"
            android:ems="10"
            android:hint="@string/confirme_sua_senha_Cadastro"
            android:inputType="textPassword"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textSize="14sp" />
    </LinearLayout>

    <GridLayout
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="2"
        android:rowCount="8">

        <TextView
            android:id="@+id/tv_endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/endereco_Cadastro"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_Rua"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_row="2"
            android:background="@drawable/edit_text_shape"
            android:hint="@string/rua_Cadastro"
            android:inputType="text|textCapWords"
            android:maxLength="20"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_Numero"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_marginTop="10dp"
            android:layout_row="3"
            android:background="@drawable/edit_text_shape"
            android:ems="10"
            android:hint="@string/numero_Cadastro"
            android:inputType="number"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_Complemento"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:layout_row="3"
            android:background="@drawable/edit_text_shape"
            android:ems="10"
            android:hint="@string/complemento_Cadastro"
            android:inputType="text|textCapWords"
            android:maxLength="15"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_Bairro"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_row="4"
            android:background="@drawable/edit_text_shape"
            android:ems="10"
            android:hint="@string/bairro_Cadastro"
            android:inputType="text|textCapWords"
            android:paddingEnd="10dp"
            android:maxLength="15"
            android:paddingStart="10dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_Cidade"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_row="5"
            android:background="@drawable/edit_text_shape"
            android:ems="10"
            android:hint="@string/cidade_Cadastro"
            android:inputType="textPersonName|textCapWords"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_Estado"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_marginTop="10dp"
            android:layout_row="6"
            android:background="@drawable/edit_text_shape"
            android:ems="10"
            android:hint="@string/estado_Cadastro"
            android:inputType="textPersonName|textCapWords"
            android:maxLength="2"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_Cep"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_column="0"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="10dp"
            android:layout_row="6"
            android:background="@drawable/edit_text_shape"
            android:ems="10"
            android:hint="@string/cep_Cadastro"
            android:maxLength="9"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textSize="14sp"
            />

    </GridLayout>

    <Button
        android:id="@+id/bt_Cadastrar"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_shape"
        android:onClick="Cadastrar"
        android:text="@string/cadastrar_Cadastro"
        android:textAllCaps="false"
        android:layout_marginBottom="64dp"/>

    <TextView
        android:id="@+id/tv_jaTemConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:onClick="haveAnAccount"
        android:text="@string/j_possuo_uma_conta_Cadastro"
        android:layout_marginBottom="64dp"/>
</LinearLayout>
